<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/grey_color_stroke"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.TUBEDELIVERIES.Utility.SourceSansProRegularTextView
                android:id="@+id/tvPast"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/past"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="15dp" />


            <com.TUBEDELIVERIES.Utility.SourceSansProRegularTextView
                android:id="@+id/tvOnGoing"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/tab_layout_ongoing"
                android:padding="15dp"
                android:gravity="center"
                android:text="@string/ongoing"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15dp"

                />


            <com.TUBEDELIVERIES.Utility.SourceSansProRegularTextView
                android:id="@+id/tvUpcoming"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:gravity="center"
                android:text="@string/upcoming"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"

                android:textSize="15dp" />

        </LinearLayout>




        <FrameLayout
            android:id="@+id/frameMyOrders"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />





</androidx.constraintlayout.widget.ConstraintLayout>

