<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackTransparent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/restro_bottom_sheet_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.TUBEDELIVERIES.Utility.SourceSansProRegularTextView
            android:id="@+id/tv_restro_heading"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:background="@drawable/restro_text_selector"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/restaurants_info"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_restro_heading">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.TUBEDELIVERIES.Utility.SourceSansProSemiboldTextView
                    android:id="@+id/tv_rest_info_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/description"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.TUBEDELIVERIES.Utility.SourceSansProRegularTextView
                    android:id="@+id/tv_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rest_info_description" />

                <com.TUBEDELIVERIES.Utility.SourceSansProSemiboldTextView
                    android:id="@+id/tv_working_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/working_hours"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_description" />

                <com.TUBEDELIVERIES.Utility.SourceSansProRegularTextView
                    android:id="@+id/tv_timing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:paddingEnd="16dp"
                    android:drawableRight="@drawable/down_arrow"
                    android:text="@string/_8_30am_9_30pm_today"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_working_hour" />

                <com.TUBEDELIVERIES.Utility.SourceSansProSemiboldTextView
                    android:id="@+id/tv_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/reviews"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_timing" />

                <com.TUBEDELIVERIES.Utility.SourceSansProRegularTextView
                    android:id="@+id/tv_viewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/view_all"
                    android:textColor="@color/mahroom"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_reviews"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_reviews" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/mahroom"
                    app:layout_constraintEnd_toEndOf="@+id/tv_viewAll"
                    app:layout_constraintStart_toStartOf="@+id/tv_viewAll"
                    app:layout_constraintTop_toBottomOf="@+id/tv_viewAll" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/restro_info_recycler"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <Spinner
                    android:id="@+id/spnRestauInfo"
                    android:layout_width="0dp"
                    android:layout_height="0.1dp"
                    android:background="@android:color/white"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_timing"
                    app:layout_constraintStart_toStartOf="@+id/tv_timing"
                    app:layout_constraintTop_toTopOf="@+id/tv_timing" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_restro_heading"
            app:layout_constraintTop_toTopOf="@+id/tv_restro_heading"
            app:srcCompat="@drawable/close_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>