<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDeliveryDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include12">


        <com.TUBEDELIVERIES.Utility.SourceSansProSemiboldTextView
            android:id="@+id/tvRestaurantNameBelow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="Radission Blu"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.TUBEDELIVERIES.Utility.SourceSansProRegularTextView
            android:id="@+id/tvPaymentModeType2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="12dp"
            android:text="@string/expect_delivery_time"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/tvRestaurantNameBelow"
            app:layout_constraintTop_toBottomOf="@+id/tvRestaurantNameBelow" />

        <com.TUBEDELIVERIES.Utility.SourceSansProRegularTextView
            android:id="@+id/tvPaymentModeType4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:drawablePadding="12dp"
            android:text="@string/phone_number"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvExpectedTime" />

        <com.TUBEDELIVERIES.Utility.SourceSansProRegularTextView
            android:id="@+id/tvPaymentModeType3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:drawablePadding="12dp"
            android:text="@string/delivery_person"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvPaymentModeType2" />

        <com.TUBEDELIVERIES.Utility.SourceSansProRegularTextView
            android:id="@+id/tvExpectedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="12dp"
            android:text="20:00PM"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvPaymentModeType2"
            app:layout_constraintTop_toBottomOf="@+id/tvPaymentModeType2" />

        <com.TUBEDELIVERIES.Utility.SourceSansProRegularTextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:drawablePadding="12dp"
            android:text="9858648252"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPaymentModeType4" />

        <com.TUBEDELIVERIES.Utility.SourceSansProRegularTextView
            android:id="@+id/tvDeliveryPerson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:drawablePadding="12dp"
            android:text="John Doe"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvPaymentModeType3"
            app:layout_constraintTop_toBottomOf="@+id/tvPaymentModeType3" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>